--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -31,8 +31,86 @@
 
     <link rel="stylesheet" href="/assets/reset.css">
     <link rel="stylesheet" href="/assets/style.css">
-    <script type="text/javascript" src="./assets/index.js" defer></script>
+    <script type="text/javascript" src="/assets/index.js" defer></script>
   </head>
   <body>
+    <div id="scroll_bar_contents" class="container scroll_bar">
+      <div class="banner">
+        <div class="tag">
+          <div class="category">ガチャ</div>
+          <div class="date">2023/6/24 4:59</div>
+        </div>
+        <img src="../assets/img/banner.png" alt="">
+      </div>
+      <div class="text-container">
+        <p class="main">
+          VQをご利用いただき誠にありがとうございます。
+          現在、以下の不具合について調査をしております。
+        </p>
+      </div>
+      <div class="text-container">
+        <p class="main heading">
+          【テキスト　メインカラー】　見出しテキストサイズ　30pt　
+        </p>
+        <p class="main">
+          通常テキストサイズ　24pt<br>
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        </p>
+      </div>
+      <div class="text-container">
+        <p class="sub heading">
+          【テキスト　サブカラー】
+        </p>
+        <p class="sub">
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        </p>
+      </div>
+      <div class="text-container">
+        <p class="positive heading">
+          【ポジティブ】
+        </p>
+        <p class="positive">
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        </p>
+      </div>
+      <div class="text-container">
+        <p class="warning heading">
+          【警告・重要】
+        </p>
+        <p class="warning">
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        </p>
+      </div>
+      <div class="text-container">
+        <p class="warning heading">
+          【警告・重要】
+        </p>
+        <p class="warning">
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        </p>
+      </div>
+      <div class="text-container">
+        <p class="warning heading">
+          【警告・重要】
+        </p>
+        <p class="warning">
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        </p>
+      </div>
+      <div class="text-container">
+        <p class="warning heading">
+          【警告・重要】
+        </p>
+        <p class="warning">
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        </p>
+      </div>
+    </div>
   </body>
 </html>
