--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -5,6 +5,12 @@ $sub: #09a9c8;
 $positive: #54d460;
 $warning: #f54646;
 
+body {
+  font-family: 'M PLUS 1', sans-serif;
+  font-size: 24px;
+  line-height: 45px;
+}
+
 .main {
   color: $main;
 }
@@ -29,10 +35,7 @@ $warning: #f54646;
   font-size: 3.2vw;
 }
 
-p {
-  font-family: 'M PLUS 1', sans-serif;
-  font-size: 2.9vw;
-  line-height: 5vw;
+  font-size: 30px;
 }
 
 .pc {
