改行抜けてた

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -44,7 +44,7 @@
       </div>
       <div class="text-container">
         <p class="main">
-          VQをご利用いただき誠にありがとうございます。
+          VQをご利用いただき誠にありがとうございます。<br>
           現在、以下の不具合について調査をしております。
         </p>
       </div>
