--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -87,19 +87,19 @@ body {
   }
 }
 
-.scroll_bar {
+.scroll-bar {
   overflow-y: scroll;
   padding-right: 3vw;
 }
 
-.scroll_bar::-webkit-scrollbar {
+.scroll-bar::-webkit-scrollbar {
   width: 2vw;
 }
 
-.scroll_bar::-webkit-scrollbar-track {
+.scroll-bar::-webkit-scrollbar-track {
   background-color: #081f32;
 }
 
-.scroll_bar::-webkit-scrollbar-thumb {
+.scroll-bar::-webkit-scrollbar-thumb {
   background-color: #09a9c8;
 }
