相対パスに直した

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -31,7 +31,7 @@
 
     <link rel="stylesheet" href="/assets/reset.css">
     <link rel="stylesheet" href="/assets/style.css">
-    <script type="text/javascript" src="/assets/index.js" defer></script>
+    <script type="text/javascript" src="./assets/index.js" defer></script>
   </head>
   <body>
     <div id="scroll_bar_contents" class="container scroll-bar">
