--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -79,15 +79,16 @@ body {
   overflow-y: scroll;
   padding-right: 3vw;
 
-  .scroll-bar::-webkit-scrollbar {
-    width: 2vw;
+  &::-webkit-scrollbar {
+    width: 12px;
   }
 
-  .scroll-bar::-webkit-scrollbar-track {
+  &::-webkit-scrollbar-track {
     background-color: #081f32;
   }
 
-  .scroll-bar::-webkit-scrollbar-thumb {
+  &::-webkit-scrollbar-thumb {
     background-color: #09a9c8;
   }
+
 }
