--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -49,7 +49,7 @@
         </p>
       </div>
       <div class="text-container">
-        <p class="main heading">
+        <p class="heading main">
           【テキスト　メインカラー】　見出しテキストサイズ　30pt　
         </p>
         <p class="main">
