textクラスをbodyにつけてわかりやすくした

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -5,7 +5,7 @@ $sub: #09a9c8;
 $positive: #54d460;
 $warning: #f54646;
 
-body {
+.text {
   font-family: 'M PLUS 1', sans-serif;
   font-size: 24px;
   line-height: 45px;
