textクラスちゃんと反映できてなかったので修正

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -52,7 +52,7 @@
         <p class="heading main">
           【テキスト　メインカラー】　見出しテキストサイズ　30pt　
         </p>
-        <p class="main">
+        <p class="text main">
           通常テキストサイズ　24pt<br>
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
         </p>
@@ -61,7 +61,7 @@
         <p class="sub heading">
           【テキスト　サブカラー】
         </p>
-        <p class="sub">
+        <p class="text sub">
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
         </p>
@@ -70,7 +70,16 @@
         <p class="positive heading">
           【ポジティブ】
         </p>
-        <p class="positive">
+        <p class="text positive">
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        </p>
+      </div>
+      <div class="text-container">
+        <p class="warning heading">
+          【警告・重要】
+        </p>
+        <p class="text warning">
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
         </p>
@@ -88,7 +97,7 @@
         <p class="warning heading">
           【警告・重要】
         </p>
-        <p class="warning">
+        <p class="text warning">
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
         </p>
@@ -97,16 +106,7 @@
         <p class="warning heading">
           【警告・重要】
         </p>
-        <p class="warning">
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-        </p>
-      </div>
-      <div class="text-container">
-        <p class="warning heading">
-          【警告・重要】
-        </p>
-        <p class="warning">
+        <p class="text warning">
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
         </p>
