--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -5,10 +5,11 @@ $sub: #09a9c8;
 $positive: #54d460;
 $warning: #f54646;
 
-.text {
+body {
   font-family: 'M PLUS 1', sans-serif;
   font-size: 24px;
   line-height: 45px;
+
 }
 
 .text-container {
@@ -17,6 +18,10 @@ $warning: #f54646;
 
   .heading {
     font-size: 30px;
+  }
+
+  .text {
+    font-size: 24px;
   }
 
   .main {
