lineheightとfontsizeはtextの方に移した

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -43,7 +43,7 @@
         <img src="../assets/img/banner.png" alt="">
       </div>
       <div class="text-container">
-        <p class="main">
+        <p class="text main">
           VQをご利用いただき誠にありがとうございます。<br>
           現在、以下の不具合について調査をしております。
         </p>
@@ -88,7 +88,7 @@
         <p class="warning heading">
           【警告・重要】
         </p>
-        <p class="warning">
+        <p class="text warning">
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
         </p>
