--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -34,7 +34,7 @@
     <script type="text/javascript" src="./assets/index.js" defer></script>
   </head>
   <body>
-    <div id="scroll-bar-contents" class="container scroll-bar">
+    <div id="scroll-bar-contents" class="container empty-scroll-bar">
       <div class="banner">
         <div class="tag">
           <div class="category">ガチャ</div>
@@ -58,7 +58,7 @@
         </p>
       </div>
       <div class="text-container">
-        <p class="sub heading">
+        <p class="heading sub">
           【テキスト　サブカラー】
         </p>
         <p class="text sub">
@@ -67,7 +67,7 @@
         </p>
       </div>
       <div class="text-container">
-        <p class="positive heading">
+        <p class="heading positive">
           【ポジティブ】
         </p>
         <p class="text positive">
@@ -76,7 +76,7 @@
         </p>
       </div>
       <div class="text-container">
-        <p class="warning heading">
+        <p class="heading warning">
           【警告・重要】
         </p>
         <p class="text warning">
@@ -85,8 +85,8 @@
         </p>
       </div>
       <div class="text-container">
-        <p class="warning heading">
-          【警告・重要】
+        <p class="heading warning">
+          【2行ある時の確認見出し2行ある時の確認見出し2行ある時の確認見出し2行ある時の確認見出し2行ある時の確認見出し2行ある時の確認見出し】
         </p>
         <p class="text warning">
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
@@ -94,7 +94,7 @@
         </p>
       </div>
       <div class="text-container">
-        <p class="warning heading">
+        <p class="heading warning">
           【警告・重要】
         </p>
         <p class="text warning">
