--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -16,6 +16,7 @@ body {
   .heading {
     font-size: 2.9vw;
     margin-bottom: 0.4vw;
+    line-height: 4vw;
   }
 
   .text {
@@ -115,7 +116,7 @@ body {
 
 }
 
-.empty-scroll-bar {
+.hide {
   overflow-y: scroll;
   padding-right: 3vw;
 
