--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -114,21 +114,14 @@ body {
     background-color: #09a9c8;
   }
 
-}
+  &.hide {
 
-.hide {
-  overflow-y: scroll;
-  padding-right: 3vw;
+    &::-webkit-scrollbar-track {
+      background-color: #03294a;
+    }
 
-  &::-webkit-scrollbar {
-    width: 12px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: #03294a;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: #03294a;
+    &::-webkit-scrollbar-thumb {
+      background-color: #03294a;
+    }
   }
 }
