--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -34,7 +34,7 @@
     <script type="text/javascript" src="./assets/index.js" defer></script>
   </head>
   <body>
-    <div id="scroll-bar-contents" class="container empty-scroll-bar">
+    <div id="scroll-bar-contents" class="container scroll-bar">
       <div class="banner">
         <div class="tag">
           <div class="category">ガチャ</div>
