--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -13,7 +13,7 @@
     <div id="scroll-bar-contents" class="container scroll-bar">
       <div class="banner">
         <div class="tag">
-          <div class="category">ガチャ</div>
+          <div class="category gacha"></div>
           <div class="date">2023/6/24 4:59</div>
         </div>
         <img src="../assets/img/banner.png" alt="">
