エラーページ書けるようにする

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="scroll-bar-contents" class="container scroll-bar">
-      <div class="banner">
+      <div class="about banner">
         <div class="tag">
           <div class="category gacha"></div>
           <div class="date">2023/6/24 4:59</div>
