--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -16,12 +16,12 @@ body {
   .heading {
     font-size: 2.9vw;
     margin-bottom: 0.4vw;
-    line-height: 4vw;
+    line-height: 4.5vw;
   }
 
   .text {
     font-size: 2.6vw;
-    line-height: 4vw;
+    line-height: 4.5vw;
   }
 
   .main {
@@ -45,14 +45,14 @@ body {
   background: #03294a;
   height: 100vh;
 
-  .banner {
+  .about {
     width: 100%;
 
     .tag {
       display: flex;
 
       .category {
-        font-family: 'M PLUS 1', sans-serif;
+        font-family: "M PLUS 1", sans-serif;
         color: white;
         text-align: center;
         font-size: 4vw;
@@ -111,7 +111,6 @@ body {
       }
 
       .date {
-        font-family: 'M PLUS 1', sans-serif;
         background: #464c66;
         color: white;
         text-align: center;
@@ -122,28 +121,32 @@ body {
       }
     }
 
-    img {
-      width: 100%;
+    &.banner {
+      img {
+        width: 100%;
+      }
+    }
+
+    &.problem {
+      .text {
+        position: relative;
+        background: #e0f7f9;
+        color: #055772;
+        aspect-ratio: 860 / 235;
+        font-size: 2.6vw;
+        line-height: 3.9vw;
+        padding: 0 2vw;
+
+        span {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          white-space: nowrap;
+        }
+      }
     }
   }
-}
-
-.scroll-bar {
-  overflow-y: scroll;
-  padding-right: 3vw;
-
-  &::-webkit-scrollbar {
-    width: 12px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: #081f32;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: #09a9c8;
-  }
-
 }
 
 .scroll-bar {
