スタイル間違ってた

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -69,7 +69,7 @@ body {
 
         &.problem {
           &::before {
-            content: "problem";
+            content: "不具合";
           }
           background: #7a7a7a;
         }
