--- a/src/ejs/event_problem.ejs
+++ b/src/ejs/event_problem.ejs
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Content-Language" content="ja">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="/assets/reset.css">
-    <link rel="stylesheet" href="/assets/style.css">
-    <script type="text/javascript" src="./assets/index.js" defer></script>
-  </head>
+<html lang="ja" prefix="og: https://ogp.me/ns#">
+  <%- include('_header') %>
   <body>
     <div id="scroll-bar-contents" class="container scroll-bar">
-      <div class="about problem">
+      <div class="about banner">
         <div class="tag">
-          <div class="category gacha"></div>
+          <div class="category problem"></div>
           <div class="date">2023/6/24 4:59</div>
         </div>
-        <p class="text">
-          <span>重要なお知らせあいうえおかきくけこさしすせそたちつ横３０文字</span>
-        </p>
+        <img src="../assets/img/banner.png" alt="">
       </div>
       <div class="text-container">
         <p class="text main">
           VQをご利用いただき誠にありがとうございます。<br>
-          現在、以下の不具合について調査をしております。<br>
-          <br>
+          現在、以下の不具合について調査をしております。
+        </p>
+      </div>
+      <div class="text-container">
+        <p class="heading main">
+          【テキスト　メインカラー】　見出しテキストサイズ　30pt　
+        </p>
+        <p class="text main">
+          通常テキストサイズ　24pt<br>
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        </p>
+      </div>
+      <div class="text-container">
+        <p class="heading sub">
+          【テキスト　サブカラー】
+        </p>
+        <p class="text sub">
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        </p>
+      </div>
+      <div class="text-container">
+        <p class="heading positive">
+          【ポジティブ】
+        </p>
+        <p class="text positive">
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        </p>
+      </div>
+      <div class="text-container">
+        <p class="heading warning">
+          【警告・重要】
+        </p>
+        <p class="text warning">
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
           あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
         </p>
