エラーページのカテゴリ表示間違ってた

--- a/src/ejs/propblem.ejs
+++ b/src/ejs/propblem.ejs
@@ -13,7 +13,7 @@
     <div id="scroll-bar-contents" class="container scroll-bar">
       <div class="about problem">
         <div class="tag">
-          <div class="category problem"></div>
+          <div class="category important"></div>
           <div class="date">2023/6/24 4:59</div>
         </div>
         <p class="text">
