--- a/src/ejs/_header.ejs
+++ b/src/ejs/_header.ejs
@@ -5,5 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="/assets/reset.css">
   <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="/assets/simplebar.css">
+  <script type="text/javascript" src="./assets/simplebar.min.js"></script>
   <script type="text/javascript" src="./assets/index.js" defer></script>
 </head>
