スクローロバーをライブラリ使った版にする

--- a/src/ejs/event_campaign.ejs
+++ b/src/ejs/event_campaign.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="ja" prefix="og: https://ogp.me/ns#">
-  <%- include('_header') %>
+<html lang="ja">
+<%- include('_header') %>
+
   <body>
     <div id="scroll-bar-contents" class="container scroll-bar">
       <div class="about banner">
@@ -53,5 +54,6 @@
         </p>
       </div>
     </div>
+    <%- include('_simplebar_script') %>
   </body>
 </html>
