--- a/src/ejs/event_event.ejs
+++ b/src/ejs/event_event.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja" prefix="og: https://ogp.me/ns#">
+<html lang="ja">
   <%- include('_header') %>
   <body>
     <div id="scroll-bar-contents" class="container scroll-bar">
@@ -53,5 +53,6 @@
         </p>
       </div>
     </div>
+    <%- include('_simplebar_script') %>
   </body>
 </html>
