--- a/src/ejs/propblem_long.ejs
+++ b/src/ejs/propblem_long.ejs
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Content-Language" content="ja">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="/assets/reset.css">
-    <link rel="stylesheet" href="/assets/style.css">
-    <script type="text/javascript" src="./assets/index.js" defer></script>
-  </head>
+  <%- include('_header') %>
   <body>
     <div id="scroll-bar-contents" class="container scroll-bar">
       <div class="about problem">
@@ -98,5 +90,6 @@
         </p>
       </div>
     </div>
+    <%- include('_simplebar_script') %>
   </body>
 </html>
