--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@500&display=swap");
 
 $main: #e0f7f9;
 $sub: #09a9c8;
@@ -6,7 +6,7 @@ $positive: #54d460;
 $warning: #f54646;
 
 body {
-  font-family: 'M PLUS 1', sans-serif;
+  font-family: "M PLUS 1", sans-serif;
 }
 
 .text-container {
@@ -150,29 +150,23 @@ body {
 }
 
 .scroll-bar {
-  overflow-y: scroll;
-  padding-right: 3vw;
-
-  &::-webkit-scrollbar {
-    width: 12px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: #081f32;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: #09a9c8;
-  }
+  padding-right: 4vw;
 
   &.hide {
-
-    &::-webkit-scrollbar-track {
-      background-color: #03294a;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: #03294a;
-    }
+    padding-right: 0;
   }
+}
+
+.simplebar-track.simplebar-vertical {
+  width: 1.4vw !important;
+}
+
+.simplebar-scrollbar::before {
+  background-color: #09a9c8 !important;
+  opacity: 1 !important;
+  border-radius: 0 !important;
+  left: 0 !important;
+  top: 0 !important;
+  right: 0 !important;
+  bottom: 0 !important;
 }
