--- a/src/ejs/propblem_long.ejs
+++ b/src/ejs/propblem_long.ejs
@@ -1,94 +1,92 @@
 <!DOCTYPE html>
 <html lang="ja">
   <%- include('_header') %>
-  <body>
-    <div id="scroll-bar-contents" class="container scroll-bar">
-      <div class="about problem">
-        <div class="tag">
-          <div class="category important"></div>
-          <div class="date">2023/6/24 4:59</div>
-        </div>
-        <p class="text">
-          <span>重要なお知らせあいうえおかきくけこさしすせそたちつ横３０文字</span>
-        </p>
+  <body id="scrollable-contents">
+    <div class="about problem">
+      <div class="tag">
+        <div class="category important">重要</div>
+        <div class="date">2023/6/24 4:59</div>
       </div>
-      <div class="text-container">
-        <p class="text main">
-          VQをご利用いただき誠にありがとうございます。<br>
-          現在、以下の不具合について調査をしております。<br>
-          <br>
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
-          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
-        </p>
-      </div>
+      <p class="text">
+        <span>重要なお知らせあいうえおかきくけこさしすせそたちつ横３０文字</span>
+      </p>
+    </div>
+    <div class="detail">
+      <p class="main">
+        VQをご利用いただき誠にありがとうございます。<br>
+        現在、以下の不具合について調査をしております。<br>
+        <br>
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほ３４文字
+        あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめ
+      </p>
     </div>
     <%- include('_simplebar_script') %>
   </body>
