--- a/src/ejs/_simplebar_script.ejs
+++ b/src/ejs/_simplebar_script.ejs
@@ -1,3 +1,3 @@
 <script defer>
-  new SimpleBar(document.getElementById("scroll-bar-contents"), { autoHide: true })
+  new SimpleBar(document.getElementById("scrollable-contents"), { autoHide: true })
 </script>
