--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -5,6 +5,7 @@
     <ul>
       <li><a href="./event_other.html">イベント(その他)</a></li>
       <li><a href="./event_other_long.html">イベント(その他) 長い表示</a></li>
+      <li><a href="./event_other_english.html">イベント(その他) 英語</a></li>
       <li><a href="./event_problem.html">イベント(不具合)</a></li>
       <li><a href="./event_event.html">イベント(イベント)</a></li>
       <li><a href="./event_gacha.html">イベント(ガチャ)</a></li>
@@ -12,6 +13,7 @@
       <li><a href="./event_important.html">イベント(重要)</a></li>
       <li><a href="./propblem.html">不具合</a></li>
       <li><a href="./propblem_long.html">不具合 長い表示</a></li>
+      <li><a href="./propblem_english.html">不具合 英語</a></li>
     </ul>
     <style>
       .scrollbar {
